--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -35,7 +43,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"meisam\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -112,13 +120,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_brackets(s: str) -> bool:\n",
     "    # TODO\n",
-    "    pass"
+    "    stack = []\n",
+    "    mapping = {')':'(', '}':'{', ']':'['}\n",
+    "    for char in s:\n",
+    "         # If it's a closing bracket\n",
+    "        if char in mapping:\n",
+    "            top = stack.pop() if stack else '#'\n",
+    "            if mapping[char] != top:\n",
+    "                return False\n",
+    "        else:\n",
+    "            # If it's an opening bracket\n",
+    "            stack.append(char)\n",
+    "    print(stack)\n",
+    "\n",
+    "    return not stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(is_valid_brackets(\"([]{})\"))\n",
+    "print(is_valid_brackets(\"([)]\"))    "
    ]
   },
   {
@@ -165,11 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The task is to check if a string of brackets ({} [] ()) is properly balanced, meaning every opening bracket has a corresponding closing bracket in the correct order.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "print(\"\"\"The task is to check if a string of brackets ({} [] ()) is properly balanced, meaning every opening bracket has a corresponding closing bracket in the correct order.\n",
+    "\"\"\")"
    ]
   },
   {
@@ -181,11 +230,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example 1:\n",
+      "Input: s = \"{[()]}\"\n",
+      "Output: True\n",
+      "\n",
+      "Example 2:\n",
+      "Input: s = \"([{{}})]\"\n",
+      "Output: False\n",
+      "\n",
+      "Example 3:\n",
+      "Input: s = \")[]{})\"\n",
+      "Output: False\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "print(\"\"\"\n",
+    "Example 1:\n",
+    "Input: s = \"{[()]}\"\n",
+    "Output: True\n",
+    "\n",
+    "Example 2:\n",
+    "Input: s = \"([{{}})]\"\n",
+    "Output: False\n",
+    "\n",
+    "Example 3:\n",
+    "Input: s = \")[]{})\"\n",
+    "Output: False\n",
+    "\"\"\")"
    ]
   },
   {
@@ -198,11 +279,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Time Complexity: O(n) (each character processed once)\n",
+      "    Space Complexity: O(n) in the worst case (all opening brackets on the stack)\n",
+      "\n",
+      "\n",
+      "      The below implementation is also use dictionary for mapping closing to opening brackets and\n",
+      "      also take care of spaces and invalid characters.\n",
+      "        •\tHandles spaces gracefully.\n",
+      "        •\tIgnores invalid characters safely.\n",
+      "        •\tSlightly clearer logic flow (if open, elif close, else invalid).\n",
+      "        •\tSame best complexities (O(n) | O(n)).\n",
+      "      \n",
+      "      Complexity: Time O(n), Space O(n) in worst case (all opens).\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "print(\"\"\"\n",
+    "    Time Complexity: O(n) (each character processed once)\n",
+    "    Space Complexity: O(n) in the worst case (all opening brackets on the stack)\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"\"\"\n",
+    "      The below implementation is also use dictionary for mapping closing to opening brackets and\n",
+    "      also take care of spaces and invalid characters.\n",
+    "        •\tHandles spaces gracefully.\n",
+    "        •\tIgnores invalid characters safely.\n",
+    "        •\tSlightly clearer logic flow (if open, elif close, else invalid).\n",
+    "        •\tSame best complexities (O(n) | O(n)).\n",
+    "      \n",
+    "      Complexity: Time O(n), Space O(n) in worst case (all opens).\n",
+    "\"\"\")\n",
+    "\n",
+    "def is_valid_brackets(s: str) -> bool:\n",
+    "    # Return True if s is a valid bracket sequence.\n",
+    "    pairs = {')': '(', ']': '[', '}': '{'}\n",
+    "    openers = set(pairs.values())\n",
+    "    stack = []\n",
+    "\n",
+    "    for ch in s:\n",
+    "        if ch in openers:\n",
+    "            stack.append(ch)\n",
+    "        elif ch in pairs:          # closing\n",
+    "            if not stack or stack.pop() != pairs[ch]:\n",
+    "                return False\n",
+    "        elif ch.isspace():         # ignore spaces if present\n",
+    "            continue\n",
+    "        else:                      # any other char makes it invalid\n",
+    "            return False\n",
+    "\n",
+    "    return not stack\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([]{}) : True\n",
+      "([)] : False\n",
+      "()[]{} : True\n",
+      ")))}}}}}}]]]]]]]] : False\n",
+      "( [ ) ] : False\n",
+      "( [  ] ): True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"([]{}) :\", is_valid_brackets(\"([]{})\"))\n",
+    "print(\"([)] :\", is_valid_brackets(\"([)]\"))\n",
+    "print(\"()[]{} :\", is_valid_brackets(\"()[]{}\"))\n",
+    "print(\")))}}}}}}]]]]]]]] :\", is_valid_brackets(\")))}}}}}}]]]]]]]]\"))\n",
+    "print(\"( [ ) ] :\", is_valid_brackets(\"( [ ) ]\"))  # spaces tolerated\n",
+    "print(\"( [  ] ):\", is_valid_brackets(\"( [ ] )\"))  # spaces tolerated"
    ]
   },
   {
@@ -215,11 +378,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "My solution works because it uses a stack to keep track of opening brackets.\n",
+      "Each time a closing bracket appears, it checks if it matches the most recent opening one.\n",
+      "If all brackets match correctly and the stack is empty at the end, the sequence is valid.\n",
+      "This ensures proper pairing and order of brackets efficiently in O(n) time.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "print(\"\"\"\n",
+    "My solution works because it uses a stack to keep track of opening brackets.\n",
+    "Each time a closing bracket appears, it checks if it matches the most recent opening one.\n",
+    "If all brackets match correctly and the stack is empty at the end, the sequence is valid.\n",
+    "This ensures proper pairing and order of brackets efficiently in O(n) time.\"\"\")"
    ]
   },
   {
@@ -232,11 +412,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      \n",
+      "    Time Complexity: O(n) — each character in the string is processed once (pushed or popped from the stack).\n",
+      "\n",
+      "    Space Complexity: O(n) — in the worst case, all opening brackets are stored in the stack before being closed.\n",
+      "      \n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "print(\"\"\"\n",
+    "      \n",
+    "    Time Complexity: O(n) — each character in the string is processed once (pushed or popped from the stack).\n",
+    "\n",
+    "    Space Complexity: O(n) — in the worst case, all opening brackets are stored in the stack before being closed.\n",
+    "      \n",
+    "    \"\"\")"
    ]
   },
   {
@@ -249,11 +450,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      \n",
+      "    An alternative solution could use repeated string replacement instead of a stack.\n",
+      "\n",
+      "    You can repeatedly remove valid pairs \"()\", \"{}\", and \"[]\" from the string until no more can be removed.\n",
+      "    If the string becomes empty at the end, it’s valid; otherwise, it’s invalid.\n",
+      "\n",
+      "    For example:\n",
+      "    \"([]{})\" → remove \"()\" → \"[]{}\" → remove \"[]\" → \"{}\" → remove \"{}\" → \"\" → valid.\n",
+      "\n",
+      "    This approach is simpler but less efficient (O(n²) time) because each replacement scans the whole string repeatedly.\n",
+      "      \n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "print(\"\"\"\n",
+    "      \n",
+    "    An alternative solution could use repeated string replacement instead of a stack.\n",
+    "\n",
+    "    You can repeatedly remove valid pairs \"()\", \"{}\", and \"[]\" from the string until no more can be removed.\n",
+    "    If the string becomes empty at the end, it’s valid; otherwise, it’s invalid.\n",
+    "\n",
+    "    For example:\n",
+    "    \"([]{})\" → remove \"()\" → \"[]{}\" → remove \"[]\" → \"{}\" → remove \"{}\" → \"\" → valid.\n",
+    "\n",
+    "    This approach is simpler but less efficient (O(n²) time) because each replacement scans the whole string repeatedly.\n",
+    "      \n",
+    "    \"\"\")"
    ]
   },
   {
@@ -301,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
