--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -37,7 +45,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"meisam\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -136,18 +144,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List, Optional\n",
+    "\n",
     "# Definition for a binary tree node.\n",
-    "# class TreeNode(object):\n",
-    "#     def __init__(self, val = 0, left = None, right = None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val = 0, left = None, right = None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
     "def bt_path(root: TreeNode) -> List[List[int]]:\n",
-    "  # TODO"
+    "  if not root:\n",
+    "    return []\n",
+    "  \n",
+    "  result: List[List[int]] = []\n",
+    "\n",
+    "  def dfs(node: TreeNode, path: List[int]):\n",
+    "    if not node:\n",
+    "      return\n",
+    "     \n",
+    "    path.append(node.val)\n",
+    "\n",
+    "    if not node.left and not node.right:\n",
+    "        result.append(list(path))\n",
+    "    else:\n",
+    "      dfs(node.left, path)\n",
+    "      dfs(node.right, path)\n",
+    "\n",
+    "    path.pop()\n",
+    "  \n",
+    "  dfs(root, [])\n",
+    "  return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [1, 2, 5], [1, 2, 6], [1, 2, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TreeNode(1)\n",
+    "root.left = TreeNode(2, TreeNode(3), TreeNode(5))\n",
+    "root.right = TreeNode(2, TreeNode(6), TreeNode(7))\n",
+    "\n",
+    "print(bt_path(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10, 9, 8], [10, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TreeNode(10)\n",
+    "root.left = TreeNode(9, TreeNode(8))\n",
+    "root.right = TreeNode(7)\n",
+    "\n",
+    "print(bt_path(root))"
    ]
   },
   {
@@ -223,11 +295,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "We are given an array [nums] containing some Zero.\n",
+      "The goal is to arrange the array in order such that all the Zeros are moved\n",
+      "to the end of the array while maintaining the relative order of the non-Zero elements.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "desc = '''\n",
+    "We are given an array [nums] containing some Zero.\n",
+    "The goal is to arrange the array in order such that all the Zeros are moved\n",
+    "to the end of the array while maintaining the relative order of the non-Zero elements.\n",
+    "'''\n",
+    "\n",
+    "print(desc)"
    ]
   },
   {
@@ -240,11 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [5, 0, 0, 2, 0, 7, 3, 0, 0, 1]  => Output: [1, 2, 3, 5, 7, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "nums = [5,0,0,2,0,7,3,0,0,1]\n",
+    "output = [1,2,3,5,7,0,0,0,0,0]\n",
+    "\n",
+    "print(f\"Input: {nums}  => Output: {output}\")"
    ]
   },
   {
@@ -257,11 +360,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "from typing import List\n",
+    "\n",
+    "def move_zeros_to_end(nums: List[int]) -> List[int]:\n",
+    "    insert_pos = 0\n",
+    "    for x in nums:\n",
+    "        if x != 0:\n",
+    "            nums[insert_pos] = x\n",
+    "            insert_pos += 1\n",
+    "\n",
+    "    while insert_pos < len(nums):\n",
+    "        nums[insert_pos] = 0\n",
+    "        insert_pos += 1\n",
+    "\n",
+    "    return nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 7, 3, 1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(move_zeros_to_end([5,0,0,2,0,7,3,0,1]))"
    ]
   },
   {
@@ -274,11 +408,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The function has 2 steps of process to re-arrange the list. \n",
+      "Firs loop exclude all Zeros and collect non-Zero elements in the front of the list.\n",
+      "In the second loop, we fill the rest of the list with Zeros. \n",
+      "The difference between the length of the nums list and insert_pos gives us the count of Zeros to be added at the end.\n",
+      "\n",
+      "ISSUE: \n",
+      "function does not maintaining the relative order of the non-zero elements while that has been asked in assignment.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "desc = \"\"\"\n",
+    "The function has 2 steps of process to re-arrange the list. \n",
+    "Firs loop exclude all Zeros and collect non-Zero elements in the front of the list.\n",
+    "In the second loop, we fill the rest of the list with Zeros. \n",
+    "The difference between the length of the nums list and insert_pos gives us the count of Zeros to be added at the end.\n",
+    "\n",
+    "ISSUE: \n",
+    "function does not maintaining the relative order of the non-zero elements while that has been asked in assignment.\n",
+    "\"\"\"\n",
+    "print(desc)"
    ]
   },
   {
@@ -291,11 +451,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Time complixity is O(n) where n is the number of elements in the input list nums. \n",
+      "The While loopruns only for the number of Zeros in the list, which is worse case\n",
+      "could be up to n again not more than n totlal.\n",
+      "\n",
+      "space complexity is O(1) as no extra space is used that grows with input size. \n",
+      "Becauase we are modifying the input list in place.\n",
+      "\n",
+      "Sounds good!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "desc = \"\"\"\n",
+    "Time complixity is O(n) where n is the number of elements in the input list nums. \n",
+    "The While loopruns only for the number of Zeros in the list, which is worse case\n",
+    "could be up to n again not more than n totlal.\n",
+    "\n",
+    "space complexity is O(1) as no extra space is used that grows with input size. \n",
+    "Becauase we are modifying the input list in place.\n",
+    "\n",
+    "Sounds good!\n",
+    "\"\"\"\n",
+    "\n",
+    "print(desc)"
    ]
   },
   {
@@ -308,11 +497,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The code was working fine and giving correct output. \n",
+      "The time compilxity is O(n) and space complexity is O(1) which is optimal for this problem.\n",
+      "\n",
+      "I can suggest an alternative approach using two pointers technique and avoid the second loop.\n",
+      "\n",
+      "[5, 2, 7, 3, 1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "desc = \"\"\"\n",
+    "The code was working fine and giving correct output. \n",
+    "The time compilxity is O(n) and space complexity is O(1) which is optimal for this problem.\n",
+    "\n",
+    "I can suggest an alternative approach using two pointers technique and avoid the second loop.\n",
+    "\"\"\"\n",
+    "\n",
+    "print(desc)\n",
+    "\n",
+    "\n",
+    "def move_zeros_to_end(nums: List[int]) -> List[int]:\n",
+    "    result = [x for x in nums if x != 0]\n",
+    "    result += [0] * (len(nums) - len(result))\n",
+    "    return result\n",
+    "\n",
+    "print(move_zeros_to_end([5,0,0,2,0,7,3,0,1]))"
    ]
   },
   {
@@ -396,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
