Improve implementation and documentation for clarity - assignment_2

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -94,9 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TreeNode' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Definition for a binary tree node.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# class TreeNode(object):\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#     def __init__(self, val = 0, left = None, right = None):\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#         self.val = val\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#         self.left = left\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#         self.right = right\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mis_duplicate\u001b[39m(root: \u001b[43mTreeNode\u001b[49m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m      8\u001b[0m   \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TreeNode' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Definition for a binary tree node.\n",
     "# class TreeNode(object):\n",
@@ -105,7 +117,7 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "def is_duplicate(root: TreeNode) -> int:\n",
-    "  # TODO"
+    "  pass"
    ]
   },
   {
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,21 +343,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: [5, 0, 0, 2, 0, 7, 3, 0, 0, 1]  => Output: [1, 2, 3, 5, 7, 0, 0, 0, 0, 0]\n"
+      "Input: [5, 0, 0, 2, 0, 7, 3, 0, 0, 1]  => Output: [5, 2, 7, 3, 1, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
     "# Your answer here\n",
     "nums = [5,0,0,2,0,7,3,0,0,1]\n",
-    "output = [1,2,3,5,7,0,0,0,0,0]\n",
+    "output = [5,2,7,3,1,0,0,0,0,0]\n",
     "\n",
     "print(f\"Input: {nums}  => Output: {output}\")"
    ]
@@ -360,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,8 +433,6 @@
       "In the second loop, we fill the rest of the list with Zeros. \n",
       "The difference between the length of the nums list and insert_pos gives us the count of Zeros to be added at the end.\n",
       "\n",
-      "ISSUE: \n",
-      "function does not maintaining the relative order of the non-zero elements while that has been asked in assignment.\n",
       "\n"
      ]
     }
@@ -435,8 +445,6 @@
     "In the second loop, we fill the rest of the list with Zeros. \n",
     "The difference between the length of the nums list and insert_pos gives us the count of Zeros to be added at the end.\n",
     "\n",
-    "ISSUE: \n",
-    "function does not maintaining the relative order of the non-zero elements while that has been asked in assignment.\n",
     "\"\"\"\n",
     "print(desc)"
    ]
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +518,14 @@
       "\n",
       "I can suggest an alternative approach using two pointers technique and avoid the second loop.\n",
       "\n",
-      "[5, 2, 7, 3, 1, 0, 0, 0, 0]\n"
+      "\n",
+      "===============================================================================================================\n",
+      "My earlier ‘alternative’ used a list comprehension, which violates the in-place constraint. \n",
+      "A better in-place approach is a single-pass two-pointer method: \n",
+      "keep a last pointer for the next write position and swap any seen non-zero into that spot. \n",
+      "This maintains O(n) time, O(1) extra space, and preserves the relative order of non-zeros without a second loop.\n",
+      "\n",
+      "result : [5, 2, 7, 3, 4, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -525,13 +540,26 @@
     "\n",
     "print(desc)\n",
     "\n",
+    "desc1=\"\"\"\n",
+    "===============================================================================================================\n",
+    "My earlier ‘alternative’ used a list comprehension, which violates the in-place constraint. \n",
+    "A better in-place approach is a single-pass two-pointer method: \n",
+    "keep a last pointer for the next write position and swap any seen non-zero into that spot. \n",
+    "This maintains O(n) time, O(1) extra space, and preserves the relative order of non-zeros without a second loop.\n",
+    "\"\"\"\n",
+    "\n",
+    "print(desc1)\n",
     "\n",
     "def move_zeros_to_end(nums: List[int]) -> List[int]:\n",
-    "    result = [x for x in nums if x != 0]\n",
-    "    result += [0] * (len(nums) - len(result))\n",
-    "    return result\n",
+    "    last = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] != 0:\n",
+    "            # swap puts this non-zero at `last`, and whatever was there (0) moves right\n",
+    "            nums[last], nums[i] = nums[i], nums[last]\n",
+    "            last += 1\n",
+    "    return nums\n",
     "\n",
-    "print(move_zeros_to_end([5,0,0,2,0,7,3,0,1]))"
+    "print(f\"result : {move_zeros_to_end([5,0,0,2,0,7,3,0,4])}\")"
    ]
   },
   {
@@ -553,11 +581,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "During Assignment 1, my main focus was to clearly understand the problem requirements and ensure that my solution was both correct and efficient.\n",
+      "I began by reviewing the example inputs and outputs to confirm the expected behavior of the algorithm. \n",
+      "I then implemented my initial version step-by-step, testing frequently to verify correctness. \n",
+      "Once I had a working version, I analyzed its time and space complexity, confirming that it met the O(n) and O(1) expectations.\n",
+      "\n",
+      "NOTE:\n",
+      "I initially provided an incorrect review of the code because I misunderstood the requirement regarding the relative order of non-zero elements. \n",
+      "I thought the assignment required the non-zero elements to be sorted in ascending order rather than maintaining their original order in the list.\n",
+      "\n",
+      "For example:\n",
+      "\n",
+      "Input: [5, 0, 0, 2, 0, 7, 3, 0, 4]\n",
+      "(What I mistakenly assumed was expected Output): [2, 3, 4, 5, 7, 0, 0, 0, 0]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "desc = \"\"\"\n",
+    "During Assignment 1, my main focus was to clearly understand the problem requirements and ensure that my solution was both correct and efficient.\n",
+    "I began by reviewing the example inputs and outputs to confirm the expected behavior of the algorithm. \n",
+    "I then implemented my initial version step-by-step, testing frequently to verify correctness. \n",
+    "Once I had a working version, I analyzed its time and space complexity, confirming that it met the O(n) and O(1) expectations.\n",
+    "\n",
+    "NOTE:\n",
+    "I initially provided an incorrect review of the code because I misunderstood the requirement regarding the relative order of non-zero elements. \n",
+    "I thought the assignment required the non-zero elements to be sorted in ascending order rather than maintaining their original order in the list.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "Input: [5, 0, 0, 2, 0, 7, 3, 0, 4]\n",
+    "(What I mistakenly assumed was expected Output): [2, 3, 4, 5, 7, 0, 0, 0, 0]\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "print(desc)"
    ]
   },
   {
